[gd_scene load_steps=43 format=2]

[ext_resource path="res://NewShop.gd" type="Script" id=1]
[ext_resource path="res://MAIN/sprites/other/select_arrow.png" type="Texture" id=2]
[ext_resource path="res://MAIN/CashPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://MAIN/sprites/guns/Ammo.png" type="Texture" id=4]
[ext_resource path="res://MAIN/sprites/other/envelope-background.png" type="Texture" id=5]
[ext_resource path="res://MAIN/sprites/other/barHorizontal_white_mid 200.png" type="Texture" id=6]
[ext_resource path="res://MAIN/sprites/guns/guncool2.png" type="Texture" id=7]
[ext_resource path="res://MAIN/sprites/guns/gun333.png" type="Texture" id=8]
[ext_resource path="res://MAIN/sprites/other/pressed.svg" type="Texture" id=9]
[ext_resource path="res://MAIN/sprites/guns/gun (1).png" type="Texture" id=10]
[ext_resource path="res://MAIN/sprites/guns/gun.png" type="Texture" id=11]
[ext_resource path="res://MAIN/sprites/guns/guns6.png" type="Texture" id=12]
[ext_resource path="res://MAIN/sprites/guns/guns2.png" type="Texture" id=13]
[ext_resource path="res://MAIN/sprites/guns/rpg2.png" type="Texture" id=14]
[ext_resource path="res://MAIN/sprites/guns/guns22.png" type="Texture" id=15]
[ext_resource path="res://MAIN/sprites/guns/guns1.png" type="Texture" id=16]
[ext_resource path="res://MAIN/Bubble Bobble.otf" type="DynamicFontData" id=17]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 200, 26 )
margin_left = 10.0
margin_right = 10.0

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 200, 26 )
modulate_color = Color( 0.419608, 0, 0, 1 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 200, 26 )
modulate_color = Color( 0.407843, 0, 0, 1 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 200, 26 )
modulate_color = Color( 0.329412, 0, 0, 1 )

[sub_resource type="DynamicFont" id=5]
size = 15
use_filter = true
font_data = ExtResource( 17 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 200, 26 )
modulate_color = Color( 0.498039, 0, 0, 1 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 200, 26 )
modulate_color = Color( 0.501961, 0, 0, 1 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 200, 26 )
modulate_color = Color( 0.364706, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 0, 0, 0.309804 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.211765, 0.211765, 0.211765, 0.760784 )

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 200, 26 )
margin_left = 10.0
margin_right = 10.0

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 1, 0, 0, 0.403922 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.254902, 0.254902, 0.254902, 0.768627 )

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 200, 26 )
margin_left = 10.0
margin_right = 10.0

[sub_resource type="StyleBoxTexture" id=15]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 200, 26 )
modulate_color = Color( 0.0941176, 0.478431, 0, 1 )

[sub_resource type="StyleBoxTexture" id=16]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 200, 26 )
modulate_color = Color( 0.0941176, 0.478431, 0, 1 )

[sub_resource type="StyleBoxTexture" id=17]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 200, 26 )
margin_left = 25.0
margin_right = 20.0
modulate_color = Color( 0.0941176, 0.478431, 0, 1 )

[sub_resource type="DynamicFont" id=18]
size = 50
font_data = ExtResource( 17 )

[sub_resource type="StyleBoxTexture" id=19]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 200, 26 )
modulate_color = Color( 0.0941176, 0.478431, 0, 1 )

[sub_resource type="StyleBoxTexture" id=20]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 200, 26 )
modulate_color = Color( 0.0941176, 0.478431, 0, 1 )

[sub_resource type="StyleBoxTexture" id=21]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 200, 26 )
margin_left = 20.0
margin_right = 20.0
modulate_color = Color( 0.0941176, 0.478431, 0, 1 )

[sub_resource type="StyleBoxTexture" id=22]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 200, 26 )
margin_left = 20.0
margin_right = 20.0
modulate_color = Color( 0.0941176, 0.478431, 0, 1 )

[sub_resource type="StyleBoxTexture" id=23]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 200, 26 )
modulate_color = Color( 0.0941176, 0.478431, 0, 1 )

[sub_resource type="StyleBoxTexture" id=24]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 200, 26 )
margin_left = 10.0
margin_right = 10.0
modulate_color = Color( 0.0941176, 0.478431, 0, 1 )

[sub_resource type="DynamicFont" id=25]
size = 50
font_data = ExtResource( 17 )

[node name="NewShop" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 646.06, 364.5 )
scale = Vector2( 1.00947, 1.0125 )
texture = ExtResource( 5 )
flip_h = true
flip_v = true

[node name="Panels" type="Node2D" parent="."]

[node name="Panel1" type="Panel" parent="Panels"]
self_modulate = Color( 0.482353, 0, 0, 1 )
margin_left = -1.87909
margin_top = 162.921
margin_right = 1292.12
margin_bottom = 727.921
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Panels/Panel1"]
margin_left = 73.0
margin_top = 63.0
margin_right = 422.0
margin_bottom = 260.0
rect_scale = Vector2( 3.3, 3.3 )
scroll_vertical_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panels/Panel1/ScrollContainer"]
margin_right = 524.0
margin_bottom = 128.0

[node name="Pistol0" type="TextureRect" parent="Panels/Panel1/ScrollContainer/HBoxContainer"]
self_modulate = Color( 1, 0, 0, 1 )
margin_right = 128.0
margin_bottom = 128.0
texture = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="Panels/Panel1/ScrollContainer/HBoxContainer/Pistol0"]
position = Vector2( 59.8689, 39.3498 )
scale = Vector2( 0.562477, 0.452942 )
texture = ExtResource( 10 )

[node name="buy_pistol0" type="Button" parent="Panels/Panel1/ScrollContainer/HBoxContainer/Pistol0"]
margin_left = 18.0
margin_top = 70.0
margin_right = 93.0
margin_bottom = 93.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "EQUIPPED"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="upg_button0" type="Button" parent="Panels/Panel1/ScrollContainer/HBoxContainer/Pistol0"]
margin_left = 18.322
margin_top = 95.4032
margin_right = 93.322
margin_bottom = 115.403
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="damage_lvl" type="ProgressBar" parent="Panels/Panel1/ScrollContainer/HBoxContainer/Pistol0"]
margin_left = 101.169
margin_top = 112.404
margin_right = 160.169
margin_bottom = 123.404
rect_rotation = -89.9999
custom_styles/fg = SubResource( 9 )
custom_styles/bg = SubResource( 10 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pistol1" type="TextureRect" parent="Panels/Panel1/ScrollContainer/HBoxContainer"]
self_modulate = Color( 1, 0, 0, 1 )
margin_left = 132.0
margin_right = 260.0
margin_bottom = 128.0
texture = ExtResource( 9 )
flip_v = true

[node name="Sprite" type="Sprite" parent="Panels/Panel1/ScrollContainer/HBoxContainer/Pistol1"]
position = Vector2( 61.1712, 34.8205 )
scale = Vector2( 0.798314, 0.647226 )
texture = ExtResource( 11 )

[node name="buy_pistol1" type="Button" parent="Panels/Panel1/ScrollContainer/HBoxContainer/Pistol1"]
margin_left = 25.1616
margin_top = 70.0
margin_right = 100.161
margin_bottom = 93.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="upg_button1" type="Button" parent="Panels/Panel1/ScrollContainer/HBoxContainer/Pistol1"]
margin_left = 24.7798
margin_top = 96.2122
margin_right = 99.7798
margin_bottom = 116.212
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="damage_lvl" type="ProgressBar" parent="Panels/Panel1/ScrollContainer/HBoxContainer/Pistol1"]
margin_left = 105.484
margin_top = 110.382
margin_right = 164.484
margin_bottom = 121.382
rect_rotation = -89.9999
custom_styles/fg = SubResource( 9 )
custom_styles/bg = SubResource( 10 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pistol2" type="TextureRect" parent="Panels/Panel1/ScrollContainer/HBoxContainer"]
self_modulate = Color( 1, 0, 0, 1 )
margin_left = 264.0
margin_right = 392.0
margin_bottom = 128.0
texture = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="Panels/Panel1/ScrollContainer/HBoxContainer/Pistol2"]
position = Vector2( 65.4011, 37.4359 )
scale = Vector2( 0.221362, 0.224542 )
texture = ExtResource( 7 )

[node name="buy_pistol2" type="Button" parent="Panels/Panel1/ScrollContainer/HBoxContainer/Pistol2"]
margin_left = 24.8166
margin_top = 70.0
margin_right = 99.8166
margin_bottom = 93.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="upg_button2" type="Button" parent="Panels/Panel1/ScrollContainer/HBoxContainer/Pistol2"]
margin_left = 25.1984
margin_top = 96.2122
margin_right = 100.198
margin_bottom = 116.212
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="damage_lvl" type="ProgressBar" parent="Panels/Panel1/ScrollContainer/HBoxContainer/Pistol2"]
margin_left = 105.35
margin_top = 110.382
margin_right = 164.35
margin_bottom = 121.382
rect_rotation = -89.9999
custom_styles/fg = SubResource( 9 )
custom_styles/bg = SubResource( 10 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pistol3" type="TextureRect" parent="Panels/Panel1/ScrollContainer/HBoxContainer"]
self_modulate = Color( 1, 0, 0, 1 )
margin_left = 396.0
margin_right = 524.0
margin_bottom = 128.0
texture = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="Panels/Panel1/ScrollContainer/HBoxContainer/Pistol3"]
position = Vector2( 64.7944, 37.0314 )
scale = Vector2( 0.218992, 0.17398 )
texture = ExtResource( 16 )

[node name="buy_pistol3" type="Button" parent="Panels/Panel1/ScrollContainer/HBoxContainer/Pistol3"]
margin_left = 24.8166
margin_top = 70.0
margin_right = 99.8166
margin_bottom = 93.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "rrrr"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="upg_button3" type="Button" parent="Panels/Panel1/ScrollContainer/HBoxContainer/Pistol3"]
margin_left = 25.1984
margin_top = 96.2122
margin_right = 100.198
margin_bottom = 116.212
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="damage_lvl" type="ProgressBar" parent="Panels/Panel1/ScrollContainer/HBoxContainer/Pistol3"]
margin_left = 105.62
margin_top = 108.36
margin_right = 164.62
margin_bottom = 119.36
rect_rotation = -89.9999
custom_styles/fg = SubResource( 9 )
custom_styles/bg = SubResource( 10 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="Panels"]
visible = false
self_modulate = Color( 0, 0.129412, 0.407843, 1 )
margin_left = -5.0
margin_top = 166.0
margin_right = 1289.0
margin_bottom = 729.0
custom_styles/panel = SubResource( 11 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Panels/Panel2"]
margin_left = 76.0
margin_top = 66.0
margin_right = 420.0
margin_bottom = 259.0
rect_scale = Vector2( 3.3, 3.3 )
scroll_vertical_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panels/Panel2/ScrollContainer"]
margin_right = 524.0
margin_bottom = 128.0

[node name="TextureRect" type="TextureRect" parent="Panels/Panel2/ScrollContainer/HBoxContainer"]
self_modulate = Color( 0, 0, 0.478431, 1 )
margin_right = 128.0
margin_bottom = 128.0
texture = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="Panels/Panel2/ScrollContainer/HBoxContainer/TextureRect"]
position = Vector2( 64.7671, 38.6985 )
scale = Vector2( 0.0633554, 0.0973471 )
texture = ExtResource( 8 )

[node name="Button" type="Button" parent="Panels/Panel2/ScrollContainer/HBoxContainer/TextureRect"]
margin_left = 22.3924
margin_top = 70.2501
margin_right = 97.3924
margin_bottom = 90.2501
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Panels/Panel2/ScrollContainer/HBoxContainer/TextureRect"]
margin_left = 22.4711
margin_top = 96.2122
margin_right = 97.4711
margin_bottom = 116.212
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Panels/Panel2/ScrollContainer/HBoxContainer/TextureRect"]
margin_left = 104.0
margin_top = 112.0
margin_right = 171.0
margin_bottom = 123.0
rect_rotation = -89.9999
custom_styles/fg = SubResource( 12 )
custom_styles/bg = SubResource( 13 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="Panels/Panel2/ScrollContainer/HBoxContainer"]
self_modulate = Color( 0, 0, 0.478431, 1 )
margin_left = 132.0
margin_right = 260.0
margin_bottom = 128.0
texture = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="Panels/Panel2/ScrollContainer/HBoxContainer/TextureRect2"]
position = Vector2( 64.0453, 39.6606 )
scale = Vector2( 0.0854933, 0.0858024 )
texture = ExtResource( 13 )

[node name="Button" type="Button" parent="Panels/Panel2/ScrollContainer/HBoxContainer/TextureRect2"]
margin_left = 24.8166
margin_top = 70.2501
margin_right = 99.8166
margin_bottom = 90.2501
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Panels/Panel2/ScrollContainer/HBoxContainer/TextureRect2"]
margin_left = 25.1984
margin_top = 96.2122
margin_right = 100.198
margin_bottom = 116.212
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar2" type="ProgressBar" parent="Panels/Panel2/ScrollContainer/HBoxContainer/TextureRect2"]
margin_left = 104.764
margin_top = 111.519
margin_right = 171.764
margin_bottom = 122.519
rect_rotation = -89.9999
custom_styles/fg = SubResource( 12 )
custom_styles/bg = SubResource( 13 )
value = 40.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="Panels/Panel2/ScrollContainer/HBoxContainer"]
self_modulate = Color( 0, 0, 0.478431, 1 )
margin_left = 264.0
margin_right = 392.0
margin_bottom = 128.0
texture = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="Panels/Panel2/ScrollContainer/HBoxContainer/TextureRect3"]
position = Vector2( 65.488, 37.4959 )
scale = Vector2( 0.057593, 0.0683962 )
texture = ExtResource( 12 )
flip_h = true

[node name="Button" type="Button" parent="Panels/Panel2/ScrollContainer/HBoxContainer/TextureRect3"]
margin_left = 24.8166
margin_top = 70.2501
margin_right = 99.8166
margin_bottom = 90.2501
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Panels/Panel2/ScrollContainer/HBoxContainer/TextureRect3"]
margin_left = 25.1984
margin_top = 96.2122
margin_right = 100.198
margin_bottom = 116.212
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar3" type="ProgressBar" parent="Panels/Panel2/ScrollContainer/HBoxContainer/TextureRect3"]
margin_left = 105.529
margin_top = 112.0
margin_right = 172.529
margin_bottom = 123.0
rect_rotation = -89.9999
custom_styles/fg = SubResource( 12 )
custom_styles/bg = SubResource( 13 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect4" type="TextureRect" parent="Panels/Panel2/ScrollContainer/HBoxContainer"]
self_modulate = Color( 0, 0, 0.478431, 1 )
margin_left = 396.0
margin_right = 524.0
margin_bottom = 128.0
texture = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="Panels/Panel2/ScrollContainer/HBoxContainer/TextureRect4"]
position = Vector2( 64.0449, 41.5847 )
scale = Vector2( 0.224826, 0.185835 )
texture = ExtResource( 15 )

[node name="Button" type="Button" parent="Panels/Panel2/ScrollContainer/HBoxContainer/TextureRect4"]
margin_left = 24.8166
margin_top = 70.2501
margin_right = 99.8166
margin_bottom = 90.2501
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Panels/Panel2/ScrollContainer/HBoxContainer/TextureRect4"]
margin_left = 25.1984
margin_top = 96.2122
margin_right = 100.198
margin_bottom = 116.212
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar4" type="ProgressBar" parent="Panels/Panel2/ScrollContainer/HBoxContainer/TextureRect4"]
margin_left = 105.529
margin_top = 112.0
margin_right = 172.529
margin_bottom = 123.0
rect_rotation = -89.9999
custom_styles/fg = SubResource( 12 )
custom_styles/bg = SubResource( 13 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel3" type="Panel" parent="Panels"]
self_modulate = Color( 0.0862745, 0.439216, 0, 1 )
margin_left = -7.0
margin_top = 165.0
margin_right = 1287.0
margin_bottom = 725.0
custom_styles/panel = SubResource( 14 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Panels/Panel3"]
margin_left = 73.0
margin_top = 59.0
margin_right = 398.0
margin_bottom = 259.0
rect_scale = Vector2( 3.5, 3.5 )
scroll_vertical_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panels/Panel3/ScrollContainer"]
margin_right = 260.0
margin_bottom = 128.0

[node name="RPG1" type="TextureRect" parent="Panels/Panel3/ScrollContainer/HBoxContainer"]
self_modulate = Color( 0, 0.572549, 0, 1 )
margin_right = 128.0
margin_bottom = 128.0
texture = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="Panels/Panel3/ScrollContainer/HBoxContainer/RPG1"]
position = Vector2( 60.4935, 36.5161 )
scale = Vector2( 0.202615, 0.265668 )
texture = ExtResource( 14 )
flip_h = true
region_enabled = true
region_rect = Rect2( 9, 150, 498, 216 )

[node name="buy_rpg1" type="Button" parent="Panels/Panel3/ScrollContainer/HBoxContainer/RPG1"]
margin_left = 22.3924
margin_top = 70.2501
margin_right = 97.3924
margin_bottom = 90.2501
__meta__ = {
"_edit_use_anchors_": false
}

[node name="upg_rpg1" type="Button" parent="Panels/Panel3/ScrollContainer/HBoxContainer/RPG1"]
margin_left = 22.4711
margin_top = 96.2122
margin_right = 97.4711
margin_bottom = 116.212
__meta__ = {
"_edit_use_anchors_": false
}

[node name="damage_lvl" type="ProgressBar" parent="Panels/Panel3/ScrollContainer/HBoxContainer/RPG1"]
margin_left = 104.0
margin_top = 112.0
margin_right = 160.0
margin_bottom = 123.0
rect_rotation = -89.9999
custom_styles/fg = SubResource( 12 )
custom_styles/bg = SubResource( 13 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RPG0" type="TextureRect" parent="Panels/Panel3/ScrollContainer/HBoxContainer"]
self_modulate = Color( 0, 0.572549, 0, 1 )
margin_left = 132.0
margin_right = 260.0
margin_bottom = 128.0
texture = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="Panels/Panel3/ScrollContainer/HBoxContainer/RPG0"]
position = Vector2( 63.4013, 35.3898 )
rotation = 1.57079
scale = Vector2( 0.39567, 0.42808 )
texture = ExtResource( 4 )
flip_h = true
region_enabled = true
region_rect = Rect2( 1204.15, 961.722, 120.812, 238.133 )

[node name="buy_rpg0" type="Button" parent="Panels/Panel3/ScrollContainer/HBoxContainer/RPG0"]
margin_left = 22.3924
margin_top = 70.2501
margin_right = 97.3924
margin_bottom = 90.2501
__meta__ = {
"_edit_use_anchors_": false
}

[node name="upg_rpg0" type="Button" parent="Panels/Panel3/ScrollContainer/HBoxContainer/RPG0"]
margin_left = 22.4711
margin_top = 96.2122
margin_right = 97.4711
margin_bottom = 116.212
__meta__ = {
"_edit_use_anchors_": false
}

[node name="damage_lvl" type="ProgressBar" parent="Panels/Panel3/ScrollContainer/HBoxContainer/RPG0"]
margin_left = 104.0
margin_top = 112.0
margin_right = 158.0
margin_bottom = 123.0
rect_rotation = -89.9999
custom_styles/fg = SubResource( 12 )
custom_styles/bg = SubResource( 13 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backButton" type="TextureButton" parent="."]
margin_left = 76.0
margin_top = 495.0
margin_right = 154.0
margin_bottom = 740.0
rect_rotation = 180.0
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nextButton" type="TextureButton" parent="."]
margin_left = 1224.73
margin_top = 266.181
margin_right = 1298.73
margin_bottom = 501.181
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CashPanel" parent="." instance=ExtResource( 3 )]
margin_top = 1.0
margin_right = 1283.0
margin_bottom = 77.0

[node name="back" type="Button" parent="."]
margin_left = 27.9019
margin_top = 4.85957
margin_right = 73.9019
margin_bottom = 24.8596
rect_scale = Vector2( 3, 3 )
text = "BACK"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 243.0
margin_top = 79.0
margin_right = 728.0
margin_bottom = 135.0
rect_scale = Vector2( 1.5, 1.4 )
alignment = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Button1" type="Button" parent="HBoxContainer"]
margin_right = 202.0
margin_bottom = 56.0
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/normal = SubResource( 17 )
custom_fonts/font = SubResource( 18 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "PISTOLS"

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/Button1"]
show_behind_parent = true
margin_top = 42.0
margin_right = 202.0
margin_bottom = 63.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="HBoxContainer"]
margin_left = 206.0
margin_right = 369.0
margin_bottom = 56.0
custom_styles/hover = SubResource( 19 )
custom_styles/pressed = SubResource( 20 )
custom_styles/normal = SubResource( 21 )
custom_fonts/font = SubResource( 18 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "RIFLES"

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/Button2"]
show_behind_parent = true
margin_top = 44.0
margin_right = 163.0
margin_bottom = 61.0
color = Color( 0, 0, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="HBoxContainer"]
margin_left = 373.0
margin_right = 485.0
margin_bottom = 56.0
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/normal = SubResource( 24 )
custom_fonts/font = SubResource( 25 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "RPGs"

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/Button3"]
show_behind_parent = true
margin_top = 44.0
margin_right = 112.0
margin_bottom = 65.0
color = Color( 0, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -9.35403
margin_top = 162.921
margin_right = 1290.65
margin_bottom = 172.921
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Panels/Panel1/ScrollContainer/HBoxContainer/Pistol1/buy_pistol1" to="." method="_on_buy_pistol1_pressed"]
[connection signal="pressed" from="Panels/Panel1/ScrollContainer/HBoxContainer/Pistol2/buy_pistol2" to="." method="_on_buy_pistol2_pressed"]
[connection signal="pressed" from="Panels/Panel1/ScrollContainer/HBoxContainer/Pistol3/buy_pistol3" to="." method="_on_buy_pistol3_pressed"]
[connection signal="pressed" from="Panels/Panel3/ScrollContainer/HBoxContainer/RPG1/buy_rpg1" to="." method="_on_buy_rpg1_pressed"]
[connection signal="pressed" from="Panels/Panel3/ScrollContainer/HBoxContainer/RPG0/buy_rpg0" to="." method="_on_buy_rpg0_pressed"]
[connection signal="pressed" from="backButton" to="." method="_on_backButton_pressed"]
[connection signal="pressed" from="nextButton" to="." method="_on_nextButton_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="HBoxContainer/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="HBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="HBoxContainer/Button3" to="." method="_on_Button3_pressed"]
